objects/blng__PaymentMethod__c.object
<CustomObject>
    <fields>
        <fullName>blng__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>AccountPaymentMethods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__AutoPay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__BankAccountName__c</fullName>
        <description>The name associated with the Bank Account</description>
        <inlineHelpText>The name associated with the Bank Account</inlineHelpText>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BankAccountNumber__c</fullName>
        <label>Bank Account Number</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>blng__BankAccountType__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__BankAccountType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__BankName__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BankRoutingCode__c</fullName>
        <description>The valid Routing number of the customer’s Bank</description>
        <inlineHelpText>The valid Routing number of the Bank, this is also called as ABA code</inlineHelpText>
        <label>Bank Routing Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillingAddress__c</fullName>
        <inlineHelpText>Should tie to the Payment Method&apos;s file with the provider</inlineHelpText>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>blng__BillingCity__c</fullName>
        <inlineHelpText>City of Card&apos;s billing address</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillingCompany__c</fullName>
        <inlineHelpText>Company of Card&apos;s billing address</inlineHelpText>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillingCountry__c</fullName>
        <inlineHelpText>Country of Card&apos;s billing address</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__BillingCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__BillingEmail__c</fullName>
        <inlineHelpText>Email of Card&apos;s billing address</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>blng__BillingFax__c</fullName>
        <inlineHelpText>Fax of Card&apos;s billing address</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>blng__BillingFirstName__c</fullName>
        <inlineHelpText>First Name of Card&apos;s billing address</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillingLastName__c</fullName>
        <inlineHelpText>Last Name of Card&apos;s billing address</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillingPhone__c</fullName>
        <inlineHelpText>Phone Number of Card&apos;s billing address</inlineHelpText>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>blng__BillingStateProvince__c</fullName>
        <inlineHelpText>State of Card&apos;s billing address</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillingStreet__c</fullName>
        <inlineHelpText>Street Address 1 of Card&apos;s billing address</inlineHelpText>
        <label>Street Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>blng__BillingZipPostal__c</fullName>
        <inlineHelpText>Postal Code of Card&apos;s billing address</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__CVV__c</fullName>
        <inlineHelpText>Card CVV of Card&apos;s billing address</inlineHelpText>
        <label>Card CVV</label>
        <length>5</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>blng__CardBIN__c</fullName>
        <inlineHelpText>The BIN for the card. First 6 digits of the card</inlineHelpText>
        <label>Card BIN</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__CardExpirationMonth__c</fullName>
        <label>Card Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__CardExpirationMonth</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__CardExpirationYear__c</fullName>
        <label>Card Expiration Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__CardExpirationYear</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__CardLastFour__c</fullName>
        <inlineHelpText>Will only store 4 digits</inlineHelpText>
        <label>Card Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__CardNumber__c</fullName>
        <label>Card Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>blng__CardType__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__CardType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__GLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>PaymentMethods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payment_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GatewayResponse__c</fullName>
        <label>Gateway Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>PaymentMethods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Nameoncard__c</fullName>
        <label>Name on Card</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__NickName__c</fullName>
        <inlineHelpText>Nick Name of Card&apos;s billing address</inlineHelpText>
        <label>Nick Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__PaymentGatewayToken__c</fullName>
        <label>Payment Gateway Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__PaymentGateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Gateway</label>
        <referenceTo>blng__PaymentGateway__c</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payment_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentType__c</fullName>
        <label>Payment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PaymentMethodType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__StreetAddress2__c</fullName>
        <inlineHelpText>Street Address 2 of Card&apos;s billing address</inlineHelpText>
        <label>Street Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Method</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__Account__c</columns>
        <columns>blng__PaymentGateway__c</columns>
        <columns>blng__Active__c</columns>
        <columns>blng__AutoPay__c</columns>
        <columns>blng__PaymentType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Payment Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>